# credit-risk-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: endpoints.py
app/api/schemas/: predict.py
app/ui/: ui.py
artifacts/: model.pkl
ml/: __init__.py  inference.py  training.py
notebooks/: 01_eda.ipynb
tests/: conftest.py  test_api.py  test_inference.py  test_training.py
