[project]
name = "credit_risk_analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Burak K.",email = "burakkilnnc@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
filterwarnings = [
    "ignore:Setting the shape on a NumPy array has been deprecated:DeprecationWarning",
    "ignore:Found unknown categories in columns:UserWarning",
]

[tool.poetry]
name = "credit_risk_analytics"
version = "0.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
ml = [
    "scikit-learn (>=1.9.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.3.0,<4.0.0)"
]
